# butter-hopper

./: .coveragerc  .gitignore  LICENSE.txt  README.md  btrhop  pyproject.toml  requirements.txt  setup.py  tox.ini  zsh_completion
boot/grub/: 50-custom_entry  default.grub  extract.cfg  install.sh
boot/refind/: btr.conf
butter_hopper/: config_helper.py  executor.py  headers.py  main.py  setup-user.sh  utils_base.py  utils_exec.py  utils_mount.py
butter_hopper/bootcrapper/: README.md  bootcrap.py  bootcrapper.sh  flatduck.py
butter_hopper/data/: images.json
butter_hopper/data/distros/debian-ubuntu/: README.md  installer.sh  setup.sh
butter_hopper/data/distros/fedora/: get.sh  setup.sh
butter_hopper/data/distros/opensuse/: setup.sh
butter_hopper/data/fstab.template/: template
butter_hopper/mountem/: mntem.py
butter_hopper/nixy/: README.md  installer.sh  package-managment.sh  update.sh
butter_hopper/nixy/systemd/: systemd-install.sh
butter_hopper/tools/: balance.sh  scrub.sh  setacl.sh  shared_storage.sh
